This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.59 (UNRELEASED)

 * Enhancements:

 * Bug fixes:
   - Don't include .pytest_cache directory in release tarball

0.58 (2024-03-09)

 * Enhancements:
   - Add email field
   - Updated translations

 * Bug fixes:
   - Fix some deprecation warnings in the test suite

0.57 (2020-12-11)

 * Enhancements:

 * Bug fixes:
   - Fixed deprecated ElementTree API (LP: #1907304)
   - Fix some deprecation warnings in the test suite

0.56 (2020-01-28)

 * Enhancements:

 * Bug fixes:
   - Fix some warnings with a newer version of flake8 (LP: #1860613)

0.55 (2019-11-15)

 * Enhancements:
   - Passwords are now displayed in a monospaced font in the right pane.

 * Bug fixes:
   - PEP 8 cleanup

0.54 (2019-10-23)

 * Enhancements:
   - Clear the clipboard when locking or closing the window.
     Do not clear clipboard content from another program.
   - Make Double-click behaviour configurable.
   - Make displaying usernames in tree configurable.
   - Password field is now displayed in a monospaced font to prevent
     certain characters from looking the same.

 * Bug fixes:

0.53 (2019-09-22)

 * Enhancements:
   - Double click on tree item toggles folder expanded state or copies
     password.
   - On enter, toggles folder expanded state or opens password entry for
     edit.
   - Navigate tree with left & right key presses: toggling expanded state
     or going to parent / child.

 * Bug fixes:
   - Fixed bug in set_tree_expansion which could result in only partial
     expansion of the tree.
   - goto_uuid now also correctly displays folders.

0.52 (2019-09-19)

 * Enhancements:
   - Show copy menu items first in the tree item context menu
   - Display username in the tree view item title

 * Bug fixes:
   - Fix copy truncates password containing pound sign (LP: #1819141)

0.51 (2017-12-20)

 * Enhancements:
   - Switch folder icon to symbolic icon